--- a/goop/src/github.com/johnstarich/go/goop/cmd/goop/build.go.html
+++ b/goop/src/github.com/johnstarich/go/goop/cmd/goop/build.go.html
@@ -97,7 +97,7 @@
 <span id="L40" class="ln">    40  </span>}
 <span id="L41" class="ln">    41  </span>
 <span id="L42" class="ln">    42  </span>func systemExt(goos string) string {
-<span id="L43" class="ln">    43  </span>	if goos == &#34;windows&#34; {
+<span id="L43" class="ln">    43  </span>	if goos == goosWindows {
 <span id="L44" class="ln">    44  </span>		return &#34;.exe&#34;
 <span id="L45" class="ln">    45  </span>	}
 <span id="L46" class="ln">    46  </span>	return &#34;&#34;
