--- a/goop/src/github.com/johnstarich/go/goop/cmd/goop/package_test.go.html
+++ b/goop/src/github.com/johnstarich/go/goop/cmd/goop/package_test.go.html
@@ -58,110 +58,133 @@
 <pre><span id="L1" class="ln">     1  </span>package main
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;testing&#34;
-<span id="L5" class="ln">     5  </span>
-<span id="L6" class="ln">     6  </span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L7" class="ln">     7  </span>)
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>func TestParsePackagePattern(t *testing.T) {
-<span id="L10" class="ln">    10  </span>	t.Parallel()
-<span id="L11" class="ln">    11  </span>	const homeDir = &#34;/homes/me&#34;
-<span id="L12" class="ln">    12  </span>	for _, tc := range []struct {
-<span id="L13" class="ln">    13  </span>		pattern string
-<span id="L14" class="ln">    14  </span>		expect  Package
-<span id="L15" class="ln">    15  </span>	}{
-<span id="L16" class="ln">    16  </span>		{
-<span id="L17" class="ln">    17  </span>			pattern: &#34;foo&#34;,
-<span id="L18" class="ln">    18  </span>			expect: Package{
-<span id="L19" class="ln">    19  </span>				Name: &#34;foo&#34;,
-<span id="L20" class="ln">    20  </span>				Path: &#34;foo&#34;,
-<span id="L21" class="ln">    21  </span>			},
-<span id="L22" class="ln">    22  </span>		},
-<span id="L23" class="ln">    23  </span>		{
-<span id="L24" class="ln">    24  </span>			pattern: &#34;foo/bar&#34;,
-<span id="L25" class="ln">    25  </span>			expect: Package{
-<span id="L26" class="ln">    26  </span>				Name: &#34;bar&#34;,
-<span id="L27" class="ln">    27  </span>				Path: &#34;foo/bar&#34;,
-<span id="L28" class="ln">    28  </span>			},
-<span id="L29" class="ln">    29  </span>		},
-<span id="L30" class="ln">    30  </span>		{
-<span id="L31" class="ln">    31  </span>			pattern: &#34;foo/bar@version&#34;,
-<span id="L32" class="ln">    32  </span>			expect: Package{
-<span id="L33" class="ln">    33  </span>				Name:          &#34;bar&#34;,
-<span id="L34" class="ln">    34  </span>				Path:          &#34;foo/bar&#34;,
-<span id="L35" class="ln">    35  </span>				ModuleVersion: &#34;version&#34;,
-<span id="L36" class="ln">    36  </span>			},
-<span id="L37" class="ln">    37  </span>		},
-<span id="L38" class="ln">    38  </span>		{
-<span id="L39" class="ln">    39  </span>			pattern: &#34;~/foo/bar&#34;,
-<span id="L40" class="ln">    40  </span>			expect: Package{
-<span id="L41" class="ln">    41  </span>				Name: &#34;bar&#34;,
-<span id="L42" class="ln">    42  </span>				Path: &#34;~/foo/bar&#34;,
-<span id="L43" class="ln">    43  </span>			},
-<span id="L44" class="ln">    44  </span>		},
-<span id="L45" class="ln">    45  </span>		{
-<span id="L46" class="ln">    46  </span>			<span class="comment">// Canonicalize home directory to &#39;~&#39; for better cross-machine bin support.</span>
-<span id="L47" class="ln">    47  </span>			<span class="comment">// Home directories can change from user to user, but script should remain portable.</span>
-<span id="L48" class="ln">    48  </span>			pattern: homeDir + &#34;/foo/bar&#34;,
-<span id="L49" class="ln">    49  </span>			expect: Package{
-<span id="L50" class="ln">    50  </span>				Name: &#34;bar&#34;,
-<span id="L51" class="ln">    51  </span>				Path: &#34;~/foo/bar&#34;,
-<span id="L52" class="ln">    52  </span>			},
-<span id="L53" class="ln">    53  </span>		},
-<span id="L54" class="ln">    54  </span>	} {
-<span id="L55" class="ln">    55  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
-<span id="L56" class="ln">    56  </span>		t.Run(tc.pattern, func(t *testing.T) {
-<span id="L57" class="ln">    57  </span>			t.Parallel()
-<span id="L58" class="ln">    58  </span>			app := App{
-<span id="L59" class="ln">    59  </span>				staticOSHomeDir: homeDir,
-<span id="L60" class="ln">    60  </span>			}
-<span id="L61" class="ln">    61  </span>			pkg, err := app.parsePackagePattern(tc.pattern)
-<span id="L62" class="ln">    62  </span>			assert.NoError(t, err)
-<span id="L63" class="ln">    63  </span>			assert.Equal(t, tc.expect, pkg)
-<span id="L64" class="ln">    64  </span>		})
-<span id="L65" class="ln">    65  </span>	}
-<span id="L66" class="ln">    66  </span>}
-<span id="L67" class="ln">    67  </span>
-<span id="L68" class="ln">    68  </span>func TestPackageFilePath(t *testing.T) {
-<span id="L69" class="ln">    69  </span>	t.Parallel()
-<span id="L70" class="ln">    70  </span>	const homeDir = &#34;/homes/me&#34;
-<span id="L71" class="ln">    71  </span>	for _, tc := range []struct {
-<span id="L72" class="ln">    72  </span>		description    string
-<span id="L73" class="ln">    73  </span>		pkg            Package
-<span id="L74" class="ln">    74  </span>		expectFilePath string
-<span id="L75" class="ln">    75  </span>		expectOk       bool
-<span id="L76" class="ln">    76  </span>	}{
-<span id="L77" class="ln">    77  </span>		{
-<span id="L78" class="ln">    78  </span>			description: &#34;remote package&#34;,
-<span id="L79" class="ln">    79  </span>			pkg:         Package{Path: thisPackage},
-<span id="L80" class="ln">    80  </span>			expectOk:    false,
-<span id="L81" class="ln">    81  </span>		},
-<span id="L82" class="ln">    82  </span>		{
-<span id="L83" class="ln">    83  </span>			description:    &#34;local package&#34;,
-<span id="L84" class="ln">    84  </span>			pkg:            Package{Path: &#34;/foo&#34;},
-<span id="L85" class="ln">    85  </span>			expectFilePath: &#34;/foo&#34;,
-<span id="L86" class="ln">    86  </span>			expectOk:       true,
-<span id="L87" class="ln">    87  </span>		},
-<span id="L88" class="ln">    88  </span>		{
-<span id="L89" class="ln">    89  </span>			description:    &#34;local should expand home directory&#34;,
-<span id="L90" class="ln">    90  </span>			pkg:            Package{Path: &#34;~/foo&#34;},
-<span id="L91" class="ln">    91  </span>			expectFilePath: homeDir + &#34;/foo&#34;,
-<span id="L92" class="ln">    92  </span>			expectOk:       true,
-<span id="L93" class="ln">    93  </span>		},
-<span id="L94" class="ln">    94  </span>	} {
-<span id="L95" class="ln">    95  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
-<span id="L96" class="ln">    96  </span>		t.Run(tc.description, func(t *testing.T) {
-<span id="L97" class="ln">    97  </span>			t.Parallel()
-<span id="L98" class="ln">    98  </span>			app := App{
-<span id="L99" class="ln">    99  </span>				staticOSHomeDir: homeDir,
-<span id="L100" class="ln">   100  </span>			}
-<span id="L101" class="ln">   101  </span>			filePath, ok := app.packageFilePath(tc.pkg)
-<span id="L102" class="ln">   102  </span>			assert.Equal(t, tc.expectFilePath, filePath)
-<span id="L103" class="ln">   103  </span>			assert.Equal(t, tc.expectOk, ok)
-<span id="L104" class="ln">   104  </span>		})
-<span id="L105" class="ln">   105  </span>	}
-<span id="L106" class="ln">   106  </span>}
-<span id="L107" class="ln">   107  </span>
+<span id="L4" class="ln">     4  </span>	&#34;path/filepath&#34;
+<span id="L5" class="ln">     5  </span>	&#34;runtime&#34;
+<span id="L6" class="ln">     6  </span>	&#34;testing&#34;
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L9" class="ln">     9  </span>)
+<span id="L10" class="ln">    10  </span>
+<span id="L11" class="ln">    11  </span>func rootFilePath() string {
+<span id="L12" class="ln">    12  </span>	root := &#34;/&#34;
+<span id="L13" class="ln">    13  </span>	if runtime.GOOS == goosWindows {
+<span id="L14" class="ln">    14  </span>		root = `C:\`
+<span id="L15" class="ln">    15  </span>	}
+<span id="L16" class="ln">    16  </span>	return root
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span>func TestParsePackagePattern(t *testing.T) {
+<span id="L20" class="ln">    20  </span>	t.Parallel()
+<span id="L21" class="ln">    21  </span>	root := rootFilePath()
+<span id="L22" class="ln">    22  </span>	homeDir := filepath.Join(root, &#34;homes&#34;, &#34;me&#34;)
+<span id="L23" class="ln">    23  </span>	for _, tc := range []struct {
+<span id="L24" class="ln">    24  </span>		pattern string
+<span id="L25" class="ln">    25  </span>		expect  Package
+<span id="L26" class="ln">    26  </span>		skip    bool
+<span id="L27" class="ln">    27  </span>	}{
+<span id="L28" class="ln">    28  </span>		{
+<span id="L29" class="ln">    29  </span>			pattern: &#34;foo&#34;,
+<span id="L30" class="ln">    30  </span>			expect: Package{
+<span id="L31" class="ln">    31  </span>				Name: &#34;foo&#34;,
+<span id="L32" class="ln">    32  </span>				Path: &#34;foo&#34;,
+<span id="L33" class="ln">    33  </span>			},
+<span id="L34" class="ln">    34  </span>		},
+<span id="L35" class="ln">    35  </span>		{
+<span id="L36" class="ln">    36  </span>			pattern: &#34;foo/bar&#34;,
+<span id="L37" class="ln">    37  </span>			expect: Package{
+<span id="L38" class="ln">    38  </span>				Name: &#34;bar&#34;,
+<span id="L39" class="ln">    39  </span>				Path: &#34;foo/bar&#34;,
+<span id="L40" class="ln">    40  </span>			},
+<span id="L41" class="ln">    41  </span>		},
+<span id="L42" class="ln">    42  </span>		{
+<span id="L43" class="ln">    43  </span>			pattern: &#34;foo/bar@version&#34;,
+<span id="L44" class="ln">    44  </span>			expect: Package{
+<span id="L45" class="ln">    45  </span>				Name:          &#34;bar&#34;,
+<span id="L46" class="ln">    46  </span>				Path:          &#34;foo/bar&#34;,
+<span id="L47" class="ln">    47  </span>				ModuleVersion: &#34;version&#34;,
+<span id="L48" class="ln">    48  </span>			},
+<span id="L49" class="ln">    49  </span>		},
+<span id="L50" class="ln">    50  </span>		{
+<span id="L51" class="ln">    51  </span>			pattern: &#34;~/foo/bar&#34;,
+<span id="L52" class="ln">    52  </span>			expect: Package{
+<span id="L53" class="ln">    53  </span>				Name: &#34;bar&#34;,
+<span id="L54" class="ln">    54  </span>				Path: &#34;~/foo/bar&#34;,
+<span id="L55" class="ln">    55  </span>			},
+<span id="L56" class="ln">    56  </span>			skip: runtime.GOOS == goosWindows, <span class="comment">// Tilde &#39;~&#39; expansion is not supported on Windows yet.</span>
+<span id="L57" class="ln">    57  </span>		},
+<span id="L58" class="ln">    58  </span>		{
+<span id="L59" class="ln">    59  </span>			<span class="comment">// Canonicalize home directory to &#39;~&#39; for better cross-machine bin support.</span>
+<span id="L60" class="ln">    60  </span>			<span class="comment">// Home directories can change from user to user, but script should remain portable.</span>
+<span id="L61" class="ln">    61  </span>			pattern: homeDir + &#34;/foo/bar&#34;,
+<span id="L62" class="ln">    62  </span>			expect: Package{
+<span id="L63" class="ln">    63  </span>				Name: &#34;bar&#34;,
+<span id="L64" class="ln">    64  </span>				Path: &#34;~/foo/bar&#34;,
+<span id="L65" class="ln">    65  </span>			},
+<span id="L66" class="ln">    66  </span>			skip: runtime.GOOS == goosWindows, <span class="comment">// Tilde &#39;~&#39; expansion is not supported on Windows yet.</span>
+<span id="L67" class="ln">    67  </span>		},
+<span id="L68" class="ln">    68  </span>	} {
+<span id="L69" class="ln">    69  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L70" class="ln">    70  </span>		t.Run(tc.pattern, func(t *testing.T) {
+<span id="L71" class="ln">    71  </span>			t.Parallel()
+<span id="L72" class="ln">    72  </span>			if tc.skip {
+<span id="L73" class="ln">    73  </span>				t.Skip(&#34;Skipped by test case param&#34;)
+<span id="L74" class="ln">    74  </span>			}
+<span id="L75" class="ln">    75  </span>			app := App{
+<span id="L76" class="ln">    76  </span>				staticOSHomeDir: homeDir,
+<span id="L77" class="ln">    77  </span>			}
+<span id="L78" class="ln">    78  </span>			pkg, err := app.parsePackagePattern(tc.pattern)
+<span id="L79" class="ln">    79  </span>			assert.NoError(t, err)
+<span id="L80" class="ln">    80  </span>			assert.Equal(t, tc.expect, pkg)
+<span id="L81" class="ln">    81  </span>		})
+<span id="L82" class="ln">    82  </span>	}
+<span id="L83" class="ln">    83  </span>}
+<span id="L84" class="ln">    84  </span>
+<span id="L85" class="ln">    85  </span>func TestPackageFilePath(t *testing.T) {
+<span id="L86" class="ln">    86  </span>	t.Parallel()
+<span id="L87" class="ln">    87  </span>	root := rootFilePath()
+<span id="L88" class="ln">    88  </span>	homeDir := filepath.Join(root, &#34;homes&#34;, &#34;me&#34;)
+<span id="L89" class="ln">    89  </span>	for _, tc := range []struct {
+<span id="L90" class="ln">    90  </span>		description    string
+<span id="L91" class="ln">    91  </span>		pkg            Package
+<span id="L92" class="ln">    92  </span>		expectFilePath string
+<span id="L93" class="ln">    93  </span>		expectOk       bool
+<span id="L94" class="ln">    94  </span>		skip           bool
+<span id="L95" class="ln">    95  </span>	}{
+<span id="L96" class="ln">    96  </span>		{
+<span id="L97" class="ln">    97  </span>			description: &#34;remote package&#34;,
+<span id="L98" class="ln">    98  </span>			pkg:         Package{Path: thisPackage},
+<span id="L99" class="ln">    99  </span>			expectOk:    false,
+<span id="L100" class="ln">   100  </span>		},
+<span id="L101" class="ln">   101  </span>		{
+<span id="L102" class="ln">   102  </span>			description:    &#34;local package&#34;,
+<span id="L103" class="ln">   103  </span>			pkg:            Package{Path: filepath.Join(root, &#34;foo&#34;)},
+<span id="L104" class="ln">   104  </span>			expectFilePath: filepath.Join(root, &#34;foo&#34;),
+<span id="L105" class="ln">   105  </span>			expectOk:       true,
+<span id="L106" class="ln">   106  </span>		},
+<span id="L107" class="ln">   107  </span>		{
+<span id="L108" class="ln">   108  </span>			description:    &#34;local should expand home directory&#34;,
+<span id="L109" class="ln">   109  </span>			pkg:            Package{Path: &#34;~/foo&#34;},
+<span id="L110" class="ln">   110  </span>			expectFilePath: homeDir + &#34;/foo&#34;,
+<span id="L111" class="ln">   111  </span>			expectOk:       true,
+<span id="L112" class="ln">   112  </span>			skip:           runtime.GOOS == goosWindows, <span class="comment">// Tilde &#39;~&#39; expansion is not supported on Windows yet.</span>
+<span id="L113" class="ln">   113  </span>		},
+<span id="L114" class="ln">   114  </span>	} {
+<span id="L115" class="ln">   115  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L116" class="ln">   116  </span>		t.Run(tc.description, func(t *testing.T) {
+<span id="L117" class="ln">   117  </span>			t.Parallel()
+<span id="L118" class="ln">   118  </span>			if tc.skip {
+<span id="L119" class="ln">   119  </span>				t.Skip(&#34;Skipped by test case param&#34;)
+<span id="L120" class="ln">   120  </span>			}
+<span id="L121" class="ln">   121  </span>			app := App{
+<span id="L122" class="ln">   122  </span>				staticOSHomeDir: homeDir,
+<span id="L123" class="ln">   123  </span>			}
+<span id="L124" class="ln">   124  </span>			filePath, ok := app.packageFilePath(tc.pkg)
+<span id="L125" class="ln">   125  </span>			assert.Equal(t, tc.expectFilePath, filePath)
+<span id="L126" class="ln">   126  </span>			assert.Equal(t, tc.expectOk, ok)
+<span id="L127" class="ln">   127  </span>		})
+<span id="L128" class="ln">   128  </span>	}
+<span id="L129" class="ln">   129  </span>}
+<span id="L130" class="ln">   130  </span>
 </pre><p></p>
 
 <div id="footer">
