--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go.html
@@ -72,109 +72,113 @@
 <span id="L15" class="ln">    15  </span>
 <span id="L16" class="ln">    16  </span>func TestDocUpToDate(t *testing.T) {
 <span id="L17" class="ln">    17  </span>	t.Parallel()
-<span id="L18" class="ln">    18  </span>	targetGoVersion := os.Getenv(&#34;COVERAGE_VERSION&#34;)
-<span id="L19" class="ln">    19  </span>	if targetGoVersion == &#34;&#34; || !strings.HasPrefix(runtime.Version(), &#34;go&#34;+targetGoVersion) {
-<span id="L20" class="ln">    20  </span>		t.Skip(&#34;Skipping doc check. Will run on primary version of Go in CI. Current version:&#34;, runtime.Version())
-<span id="L21" class="ln">    21  </span>	}
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>	templateBytes, err := os.ReadFile(&#34;doc.go&#34;)
-<span id="L24" class="ln">    24  </span>	require.NoError(t, err)
-<span id="L25" class="ln">    25  </span>	var newDoc bytes.Buffer
-<span id="L26" class="ln">    26  </span>	err = genDoc(templateBytes, &amp;newDoc)
-<span id="L27" class="ln">    27  </span>	require.NoError(t, err)
-<span id="L28" class="ln">    28  </span>
-<span id="L29" class="ln">    29  </span>	currentDoc, err := os.ReadFile(&#34;../../doc.go&#34;)
-<span id="L30" class="ln">    30  </span>	require.NoError(t, err)
-<span id="L31" class="ln">    31  </span>	if !assert.Equal(t, newDoc.String(), string(currentDoc)) {
-<span id="L32" class="ln">    32  </span>		t.Log(&#34;Usage docs are out of date: Run `go generate ./...` to regenerate them.&#34;)
-<span id="L33" class="ln">    33  </span>	}
-<span id="L34" class="ln">    34  </span>}
-<span id="L35" class="ln">    35  </span>
-<span id="L36" class="ln">    36  </span>func TestRun(t *testing.T) {
-<span id="L37" class="ln">    37  </span>	t.Parallel()
-<span id="L38" class="ln">    38  </span>	t.Run(&#34;no args&#34;, func(t *testing.T) {
-<span id="L39" class="ln">    39  </span>		t.Parallel()
-<span id="L40" class="ln">    40  </span>		assert.EqualError(t, run(&#34;&#34;, &#34;&#34;), &#34;Provide doc template and output file paths&#34;)
-<span id="L41" class="ln">    41  </span>	})
-<span id="L42" class="ln">    42  </span>
-<span id="L43" class="ln">    43  </span>	t.Run(&#34;missing template file&#34;, func(t *testing.T) {
-<span id="L44" class="ln">    44  </span>		t.Parallel()
-<span id="L45" class="ln">    45  </span>		assert.Error(t, run(&#34;/does/not/exist&#34;, &#34;unused&#34;))
-<span id="L46" class="ln">    46  </span>	})
-<span id="L47" class="ln">    47  </span>
-<span id="L48" class="ln">    48  </span>	t.Run(&#34;can&#39;t open output file&#34;, func(t *testing.T) {
-<span id="L49" class="ln">    49  </span>		t.Parallel()
-<span id="L50" class="ln">    50  </span>		assert.Error(t, run(&#34;./doc.go&#34;, &#34;/cannot/open/file&#34;))
-<span id="L51" class="ln">    51  </span>	})
-<span id="L52" class="ln">    52  </span>
-<span id="L53" class="ln">    53  </span>	t.Run(&#34;invalid template&#34;, func(t *testing.T) {
-<span id="L54" class="ln">    54  </span>		t.Parallel()
-<span id="L55" class="ln">    55  </span>		tmpl, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
-<span id="L56" class="ln">    56  </span>		require.NoError(t, err)
-<span id="L57" class="ln">    57  </span>		defer os.Remove(tmpl.Name())
-<span id="L58" class="ln">    58  </span>		output, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
-<span id="L59" class="ln">    59  </span>		require.NoError(t, err)
-<span id="L60" class="ln">    60  </span>		defer os.Remove(output.Name())
-<span id="L61" class="ln">    61  </span>
-<span id="L62" class="ln">    62  </span>		_, err = tmpl.WriteString(&#34;{{ InvalidSyntax }}&#34;)
+<span id="L18" class="ln">    18  </span>	if runtime.GOOS == &#34;windows&#34; {
+<span id="L19" class="ln">    19  </span>		t.Skip(&#34;Windows &#39;go fmt&#39; results vary from all other OSes in line endings and spacing.&#34;)
+<span id="L20" class="ln">    20  </span>	}
+<span id="L21" class="ln">    21  </span>
+<span id="L22" class="ln">    22  </span>	targetGoVersion := os.Getenv(&#34;LINT_GO_VERSION&#34;)
+<span id="L23" class="ln">    23  </span>	if targetGoVersion == &#34;&#34; || !strings.HasPrefix(runtime.Version(), &#34;go&#34;+targetGoVersion) {
+<span id="L24" class="ln">    24  </span>		t.Skip(&#34;Skipping doc check. Will run on primary version of Go in CI. Current version:&#34;, runtime.Version())
+<span id="L25" class="ln">    25  </span>	}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span>	templateBytes, err := os.ReadFile(&#34;doc.go&#34;)
+<span id="L28" class="ln">    28  </span>	require.NoError(t, err)
+<span id="L29" class="ln">    29  </span>	var newDoc bytes.Buffer
+<span id="L30" class="ln">    30  </span>	err = genDoc(templateBytes, &amp;newDoc)
+<span id="L31" class="ln">    31  </span>	require.NoError(t, err)
+<span id="L32" class="ln">    32  </span>
+<span id="L33" class="ln">    33  </span>	currentDoc, err := os.ReadFile(&#34;../../doc.go&#34;)
+<span id="L34" class="ln">    34  </span>	require.NoError(t, err)
+<span id="L35" class="ln">    35  </span>	if !assert.Equal(t, newDoc.String(), string(currentDoc)) {
+<span id="L36" class="ln">    36  </span>		t.Log(&#34;Usage docs are out of date: Run `go generate ./...` to regenerate them.&#34;)
+<span id="L37" class="ln">    37  </span>	}
+<span id="L38" class="ln">    38  </span>}
+<span id="L39" class="ln">    39  </span>
+<span id="L40" class="ln">    40  </span>func TestRun(t *testing.T) {
+<span id="L41" class="ln">    41  </span>	t.Parallel()
+<span id="L42" class="ln">    42  </span>	t.Run(&#34;no args&#34;, func(t *testing.T) {
+<span id="L43" class="ln">    43  </span>		t.Parallel()
+<span id="L44" class="ln">    44  </span>		assert.EqualError(t, run(&#34;&#34;, &#34;&#34;), &#34;Provide doc template and output file paths&#34;)
+<span id="L45" class="ln">    45  </span>	})
+<span id="L46" class="ln">    46  </span>
+<span id="L47" class="ln">    47  </span>	t.Run(&#34;missing template file&#34;, func(t *testing.T) {
+<span id="L48" class="ln">    48  </span>		t.Parallel()
+<span id="L49" class="ln">    49  </span>		assert.Error(t, run(&#34;/does/not/exist&#34;, &#34;unused&#34;))
+<span id="L50" class="ln">    50  </span>	})
+<span id="L51" class="ln">    51  </span>
+<span id="L52" class="ln">    52  </span>	t.Run(&#34;can&#39;t open output file&#34;, func(t *testing.T) {
+<span id="L53" class="ln">    53  </span>		t.Parallel()
+<span id="L54" class="ln">    54  </span>		assert.Error(t, run(&#34;./doc.go&#34;, &#34;/cannot/open/file&#34;))
+<span id="L55" class="ln">    55  </span>	})
+<span id="L56" class="ln">    56  </span>
+<span id="L57" class="ln">    57  </span>	t.Run(&#34;invalid template&#34;, func(t *testing.T) {
+<span id="L58" class="ln">    58  </span>		t.Parallel()
+<span id="L59" class="ln">    59  </span>		tmpl, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
+<span id="L60" class="ln">    60  </span>		require.NoError(t, err)
+<span id="L61" class="ln">    61  </span>		defer os.Remove(tmpl.Name())
+<span id="L62" class="ln">    62  </span>		output, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
 <span id="L63" class="ln">    63  </span>		require.NoError(t, err)
-<span id="L64" class="ln">    64  </span>		assert.Error(t, run(tmpl.Name(), output.Name()))
-<span id="L65" class="ln">    65  </span>	})
-<span id="L66" class="ln">    66  </span>
-<span id="L67" class="ln">    67  </span>	t.Run(&#34;happy path&#34;, func(t *testing.T) {
-<span id="L68" class="ln">    68  </span>		t.Parallel()
-<span id="L69" class="ln">    69  </span>		file, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
-<span id="L70" class="ln">    70  </span>		require.NoError(t, err)
-<span id="L71" class="ln">    71  </span>		defer os.Remove(file.Name())
-<span id="L72" class="ln">    72  </span>
-<span id="L73" class="ln">    73  </span>		err = run(&#34;./doc.go&#34;, file.Name())
-<span id="L74" class="ln">    74  </span>		assert.NoError(t, err)
-<span id="L75" class="ln">    75  </span>	})
-<span id="L76" class="ln">    76  </span>}
-<span id="L77" class="ln">    77  </span>
-<span id="L78" class="ln">    78  </span>func TestMain(t *testing.T) {
-<span id="L79" class="ln">    79  </span>	t.Parallel()
-<span id="L80" class="ln">    80  </span>	cmd.SetupTestExiter(t)
-<span id="L81" class="ln">    81  </span>	assert.PanicsWithError(t, &#34;Attempted to exit with exit code 1&#34;, func() {
-<span id="L82" class="ln">    82  </span>		main()
-<span id="L83" class="ln">    83  </span>	})
-<span id="L84" class="ln">    84  </span>}
-<span id="L85" class="ln">    85  </span>
-<span id="L86" class="ln">    86  </span>func TestSmallestNonNegative(t *testing.T) {
-<span id="L87" class="ln">    87  </span>	t.Parallel()
-<span id="L88" class="ln">    88  </span>	for _, tc := range []struct {
-<span id="L89" class="ln">    89  </span>		input  []int
-<span id="L90" class="ln">    90  </span>		expect int
-<span id="L91" class="ln">    91  </span>	}{
-<span id="L92" class="ln">    92  </span>		{
-<span id="L93" class="ln">    93  </span>			input:  []int{2, 1, 0},
-<span id="L94" class="ln">    94  </span>			expect: 0,
-<span id="L95" class="ln">    95  </span>		},
+<span id="L64" class="ln">    64  </span>		defer os.Remove(output.Name())
+<span id="L65" class="ln">    65  </span>
+<span id="L66" class="ln">    66  </span>		_, err = tmpl.WriteString(&#34;{{ InvalidSyntax }}&#34;)
+<span id="L67" class="ln">    67  </span>		require.NoError(t, err)
+<span id="L68" class="ln">    68  </span>		assert.Error(t, run(tmpl.Name(), output.Name()))
+<span id="L69" class="ln">    69  </span>	})
+<span id="L70" class="ln">    70  </span>
+<span id="L71" class="ln">    71  </span>	t.Run(&#34;happy path&#34;, func(t *testing.T) {
+<span id="L72" class="ln">    72  </span>		t.Parallel()
+<span id="L73" class="ln">    73  </span>		file, err := os.CreateTemp(&#34;&#34;, &#34;&#34;)
+<span id="L74" class="ln">    74  </span>		require.NoError(t, err)
+<span id="L75" class="ln">    75  </span>		defer os.Remove(file.Name())
+<span id="L76" class="ln">    76  </span>
+<span id="L77" class="ln">    77  </span>		err = run(&#34;./doc.go&#34;, file.Name())
+<span id="L78" class="ln">    78  </span>		assert.NoError(t, err)
+<span id="L79" class="ln">    79  </span>	})
+<span id="L80" class="ln">    80  </span>}
+<span id="L81" class="ln">    81  </span>
+<span id="L82" class="ln">    82  </span>func TestMain(t *testing.T) {
+<span id="L83" class="ln">    83  </span>	t.Parallel()
+<span id="L84" class="ln">    84  </span>	cmd.SetupTestExiter(t)
+<span id="L85" class="ln">    85  </span>	assert.PanicsWithError(t, &#34;Attempted to exit with exit code 1&#34;, func() {
+<span id="L86" class="ln">    86  </span>		main()
+<span id="L87" class="ln">    87  </span>	})
+<span id="L88" class="ln">    88  </span>}
+<span id="L89" class="ln">    89  </span>
+<span id="L90" class="ln">    90  </span>func TestSmallestNonNegative(t *testing.T) {
+<span id="L91" class="ln">    91  </span>	t.Parallel()
+<span id="L92" class="ln">    92  </span>	for _, tc := range []struct {
+<span id="L93" class="ln">    93  </span>		input  []int
+<span id="L94" class="ln">    94  </span>		expect int
+<span id="L95" class="ln">    95  </span>	}{
 <span id="L96" class="ln">    96  </span>		{
-<span id="L97" class="ln">    97  </span>			input:  []int{-1, 2, 3},
-<span id="L98" class="ln">    98  </span>			expect: 2,
+<span id="L97" class="ln">    97  </span>			input:  []int{2, 1, 0},
+<span id="L98" class="ln">    98  </span>			expect: 0,
 <span id="L99" class="ln">    99  </span>		},
 <span id="L100" class="ln">   100  </span>		{
-<span id="L101" class="ln">   101  </span>			input:  []int{1, -2, 3},
-<span id="L102" class="ln">   102  </span>			expect: 1,
+<span id="L101" class="ln">   101  </span>			input:  []int{-1, 2, 3},
+<span id="L102" class="ln">   102  </span>			expect: 2,
 <span id="L103" class="ln">   103  </span>		},
 <span id="L104" class="ln">   104  </span>		{
-<span id="L105" class="ln">   105  </span>			input:  []int{1, 2, -3},
+<span id="L105" class="ln">   105  </span>			input:  []int{1, -2, 3},
 <span id="L106" class="ln">   106  </span>			expect: 1,
 <span id="L107" class="ln">   107  </span>		},
 <span id="L108" class="ln">   108  </span>		{
-<span id="L109" class="ln">   109  </span>			input:  []int{-1},
-<span id="L110" class="ln">   110  </span>			expect: 0,
+<span id="L109" class="ln">   109  </span>			input:  []int{1, 2, -3},
+<span id="L110" class="ln">   110  </span>			expect: 1,
 <span id="L111" class="ln">   111  </span>		},
-<span id="L112" class="ln">   112  </span>	} {
-<span id="L113" class="ln">   113  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
-<span id="L114" class="ln">   114  </span>		t.Run(fmt.Sprintln(tc.input), func(t *testing.T) {
-<span id="L115" class="ln">   115  </span>			t.Parallel()
-<span id="L116" class="ln">   116  </span>			assert.Equal(t, tc.expect, smallestNonNegative(tc.input...))
-<span id="L117" class="ln">   117  </span>		})
-<span id="L118" class="ln">   118  </span>	}
-<span id="L119" class="ln">   119  </span>}
-<span id="L120" class="ln">   120  </span>
+<span id="L112" class="ln">   112  </span>		{
+<span id="L113" class="ln">   113  </span>			input:  []int{-1},
+<span id="L114" class="ln">   114  </span>			expect: 0,
+<span id="L115" class="ln">   115  </span>		},
+<span id="L116" class="ln">   116  </span>	} {
+<span id="L117" class="ln">   117  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L118" class="ln">   118  </span>		t.Run(fmt.Sprintln(tc.input), func(t *testing.T) {
+<span id="L119" class="ln">   119  </span>			t.Parallel()
+<span id="L120" class="ln">   120  </span>			assert.Equal(t, tc.expect, smallestNonNegative(tc.input...))
+<span id="L121" class="ln">   121  </span>		})
+<span id="L122" class="ln">   122  </span>	}
+<span id="L123" class="ln">   123  </span>}
+<span id="L124" class="ln">   124  </span>
 </pre><p></p>
 
 <div id="footer">
