--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
@@ -61,60 +61,65 @@
 <span id="L4" class="ln">     4  </span>	&#34;flag&#34;
 <span id="L5" class="ln">     5  </span>	&#34;os&#34;
 <span id="L6" class="ln">     6  </span>	&#34;path/filepath&#34;
-<span id="L7" class="ln">     7  </span>	&#34;testing&#34;
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span>func testFile(t *testing.T, contents string) string {
-<span id="L14" class="ln">    14  </span>	t.Helper()
-<span id="L15" class="ln">    15  </span>	p := filepath.Join(t.TempDir(), &#34;file&#34;)
-<span id="L16" class="ln">    16  </span>	err := os.WriteFile(p, []byte(contents), 0600)
-<span id="L17" class="ln">    17  </span>	if err != nil {
-<span id="L18" class="ln">    18  </span>		t.Fatal(err)
-<span id="L19" class="ln">    19  </span>	}
-<span id="L20" class="ln">    20  </span>	return p
-<span id="L21" class="ln">    21  </span>}
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>func TestFilePathContents(t *testing.T) {
-<span id="L24" class="ln">    24  </span>	t.Parallel()
-<span id="L25" class="ln">    25  </span>	t.Run(&#34;no flag&#34;, func(t *testing.T) {
-<span id="L26" class="ln">    26  </span>		t.Parallel()
-<span id="L27" class="ln">    27  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
-<span id="L28" class="ln">    28  </span>		var f FilePathContents
-<span id="L29" class="ln">    29  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
-<span id="L30" class="ln">    30  </span>		err := set.Parse(nil)
-<span id="L31" class="ln">    31  </span>		assert.NoError(t, err)
-<span id="L32" class="ln">    32  </span>		assert.Equal(t, &#34;&#34;, string(f.Contents()))
-<span id="L33" class="ln">    33  </span>	})
-<span id="L34" class="ln">    34  </span>
-<span id="L35" class="ln">    35  </span>	t.Run(&#34;valid file&#34;, func(t *testing.T) {
-<span id="L36" class="ln">    36  </span>		t.Parallel()
-<span id="L37" class="ln">    37  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
-<span id="L38" class="ln">    38  </span>		const someContents = &#34;some contents&#34;
-<span id="L39" class="ln">    39  </span>		tempFile := testFile(t, someContents)
-<span id="L40" class="ln">    40  </span>
-<span id="L41" class="ln">    41  </span>		var f FilePathContents
-<span id="L42" class="ln">    42  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
-<span id="L43" class="ln">    43  </span>		err := set.Parse([]string{&#34;-myflag&#34;, tempFile})
-<span id="L44" class="ln">    44  </span>		assert.NoError(t, err)
-<span id="L45" class="ln">    45  </span>		assert.Equal(t, someContents, string(f.Contents()))
-<span id="L46" class="ln">    46  </span>		assert.Equal(t, someContents, f.String())
-<span id="L47" class="ln">    47  </span>	})
-<span id="L48" class="ln">    48  </span>
-<span id="L49" class="ln">    49  </span>	t.Run(&#34;invalid file&#34;, func(t *testing.T) {
-<span id="L50" class="ln">    50  </span>		t.Parallel()
-<span id="L51" class="ln">    51  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
-<span id="L52" class="ln">    52  </span>		var f FilePathContents
-<span id="L53" class="ln">    53  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
-<span id="L54" class="ln">    54  </span>		err := set.Parse([]string{&#34;-myflag&#34;, &#34;/does/not/exist&#34;})
-<span id="L55" class="ln">    55  </span>		require.Error(t, err)
-<span id="L56" class="ln">    56  </span>		assert.Contains(t, err.Error(), &#34;open /does/not/exist: no such file or directory&#34;)
-<span id="L57" class="ln">    57  </span>		assert.Equal(t, &#34;&#34;, f.String())
-<span id="L58" class="ln">    58  </span>	})
-<span id="L59" class="ln">    59  </span>}
-<span id="L60" class="ln">    60  </span>
+<span id="L7" class="ln">     7  </span>	&#34;runtime&#34;
+<span id="L8" class="ln">     8  </span>	&#34;testing&#34;
+<span id="L9" class="ln">     9  </span>
+<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span>func testFile(t *testing.T, contents string) string {
+<span id="L15" class="ln">    15  </span>	t.Helper()
+<span id="L16" class="ln">    16  </span>	p := filepath.Join(t.TempDir(), &#34;file&#34;)
+<span id="L17" class="ln">    17  </span>	err := os.WriteFile(p, []byte(contents), 0600)
+<span id="L18" class="ln">    18  </span>	if err != nil {
+<span id="L19" class="ln">    19  </span>		t.Fatal(err)
+<span id="L20" class="ln">    20  </span>	}
+<span id="L21" class="ln">    21  </span>	return p
+<span id="L22" class="ln">    22  </span>}
+<span id="L23" class="ln">    23  </span>
+<span id="L24" class="ln">    24  </span>func TestFilePathContents(t *testing.T) {
+<span id="L25" class="ln">    25  </span>	t.Parallel()
+<span id="L26" class="ln">    26  </span>	t.Run(&#34;no flag&#34;, func(t *testing.T) {
+<span id="L27" class="ln">    27  </span>		t.Parallel()
+<span id="L28" class="ln">    28  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
+<span id="L29" class="ln">    29  </span>		var f FilePathContents
+<span id="L30" class="ln">    30  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
+<span id="L31" class="ln">    31  </span>		err := set.Parse(nil)
+<span id="L32" class="ln">    32  </span>		assert.NoError(t, err)
+<span id="L33" class="ln">    33  </span>		assert.Equal(t, &#34;&#34;, string(f.Contents()))
+<span id="L34" class="ln">    34  </span>	})
+<span id="L35" class="ln">    35  </span>
+<span id="L36" class="ln">    36  </span>	t.Run(&#34;valid file&#34;, func(t *testing.T) {
+<span id="L37" class="ln">    37  </span>		t.Parallel()
+<span id="L38" class="ln">    38  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
+<span id="L39" class="ln">    39  </span>		const someContents = &#34;some contents&#34;
+<span id="L40" class="ln">    40  </span>		tempFile := testFile(t, someContents)
+<span id="L41" class="ln">    41  </span>
+<span id="L42" class="ln">    42  </span>		var f FilePathContents
+<span id="L43" class="ln">    43  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
+<span id="L44" class="ln">    44  </span>		err := set.Parse([]string{&#34;-myflag&#34;, tempFile})
+<span id="L45" class="ln">    45  </span>		assert.NoError(t, err)
+<span id="L46" class="ln">    46  </span>		assert.Equal(t, someContents, string(f.Contents()))
+<span id="L47" class="ln">    47  </span>		assert.Equal(t, someContents, f.String())
+<span id="L48" class="ln">    48  </span>	})
+<span id="L49" class="ln">    49  </span>
+<span id="L50" class="ln">    50  </span>	t.Run(&#34;invalid file&#34;, func(t *testing.T) {
+<span id="L51" class="ln">    51  </span>		t.Parallel()
+<span id="L52" class="ln">    52  </span>		set := flag.NewFlagSet(&#34;&#34;, flag.ContinueOnError)
+<span id="L53" class="ln">    53  </span>		var f FilePathContents
+<span id="L54" class="ln">    54  </span>		set.Var(&amp;f, &#34;myflag&#34;, &#34;&#34;)
+<span id="L55" class="ln">    55  </span>		err := set.Parse([]string{&#34;-myflag&#34;, &#34;/does/not/exist&#34;})
+<span id="L56" class="ln">    56  </span>		require.Error(t, err)
+<span id="L57" class="ln">    57  </span>		if runtime.GOOS == &#34;windows&#34; {
+<span id="L58" class="ln">    58  </span>			assert.Contains(t, err.Error(), &#34;open /does/not/exist: The system cannot find the path specified.&#34;)
+<span id="L59" class="ln">    59  </span>		} else {
+<span id="L60" class="ln">    60  </span>			assert.Contains(t, err.Error(), &#34;open /does/not/exist: no such file or directory&#34;)
+<span id="L61" class="ln">    61  </span>		}
+<span id="L62" class="ln">    62  </span>		assert.Equal(t, &#34;&#34;, f.String())
+<span id="L63" class="ln">    63  </span>	})
+<span id="L64" class="ln">    64  </span>}
+<span id="L65" class="ln">    65  </span>
 </pre><p></p>
 
 <div id="footer">
